tests/snapshots/transforms__tests__transforms__inputs__nested_all_of.json.snap
---
source: tests/transforms.rs
expression: schema
---
Object(Properties(ObjectProperties(
  properties: {
    "my_object": Property(
      doc: None,
      schema: AllOf([
        Number(Minimum(3.0)),
        Number(Maximum(5.0)),
      ]),
      optional: true,
    ),
  },
  pattern_properties: {},
  additional_properties: None,
)))
